--- a/hometask1.html
+++ b/hometask1.html
@@ -68,7 +68,7 @@ section b{
             <li>
                 <span><b>Select Category :</b></span>
                 <select name="category" id="">
-                    <option value="">Education</option>
+                    <option value="">Education1</option>
                     <option value="">Sports</option>
                     <option value="">Business</option>
                     <option value="">Entertainment</option>
