--- a/hometask1.html
+++ b/hometask1.html
@@ -69,7 +69,7 @@ section b{
                 <span><b>Select Category :</b></span>
                 <select name="category" id="">
                     <option value="">Education1</option>
-                    <option value="">Sports</option>
+                    <option value="">Sports1</option>
                     <option value="">Business</option>
                     <option value="">Entertainment</option>
                     <option value="">Government</option>
