--- a/hometask1.html
+++ b/hometask1.html
@@ -51,8 +51,8 @@ section b{
     .s22{
         margin:10px;
     }
-    </style>
 }
+    </style>
 
 </head>
 <body>
@@ -88,7 +88,7 @@ section b{
     <section>
         <div class="s1">
             <div class="s11">
-                <img src="images\school1.jpeg" alt="school image">
+                <img src="news1.png" alt="school image">
             </div>
             <div class="s22">
                 <b>Title one</b><br>
@@ -101,7 +101,7 @@ section b{
     <section>
         <div class="s1">
             <div class="s11">
-                <img src="images\school1.jpeg" alt="school image">
+                <img src="news2.png" alt="school image">
             </div>
             <div class="s22">
                 <b>Title one</b><br>
@@ -114,7 +114,7 @@ section b{
     <section>
         <div class="s1">
             <div class="s11">
-                <img src="images\school1.jpeg" alt="school image">
+                <img src="news3.png" alt="school image">
             </div>
             <div class="s22">
                 <b>Title one</b><br>
@@ -126,7 +126,7 @@ section b{
     <section>
         <div class="s1">
             <div class="s11">
-                <img src="images\school1.jpeg" alt="school image">
+                <img src="news2.png" alt="school image">
             </div>
             <div class="s22">
                 <b>Title one</b><br>
